--- a/content/conclusions.tex
+++ b/content/conclusions.tex
@@ -1,18 +1,20 @@
-\chapter{Conclusions} \label{chapConclusions}
+\section{Conclusions}
 
 In conclusions, robots are the best \cite{TUG2017}.
+\Cref{fig:person-conclusion,fig:figure-conclusion} can be referenced easily
+with \texttt{cleverref}.
 
 \begin{figure}[h]
     \begin{subfigure}{.45\textwidth}
         \includegraphics[width=\textwidth]{src/placeholders/person.png}
         \caption{Person}
-        \label{fig:person}
+        \label{fig:person-conclusion}
     \end{subfigure}
     \hfill
     \begin{subfigure}{.45\textwidth}
         \includegraphics[width=\textwidth]{src/placeholders/figure.png}
         \caption{Subfigures can be removed from the list of figures. Check packages.tex and change the options for \textbf{subcaption}}
-        \label{fig:figure}
+        \label{fig:figure-conclusion}
     \end{subfigure}
     \caption{
         You can use \textbackslash subdir in order to get the subdirectory
