--- a/src/packages.tex
+++ b/src/packages.tex
@@ -1,4 +1,4 @@
-%% Bibliography packages recommended for biblatex -----------------------------
+%% Bibliography packages recommended for biblatex
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
@@ -9,32 +9,34 @@
     sorting=ynt
 ]{biblatex}
 
-%% Essential packages ---------------------------------------------------------
-
+%% Essential packages
 % Diagrams and \foreach
 \usepackage{tikz}
-
+\input{src/packages/tkiz_setup.tex}
 % Subfigures
 \usepackage{caption}
 \usepackage[list=true,listformat=simple]{subcaption}
-
-% Table of contents
-\usepackage{tocloft}  % Set TOC options.
-\setlength{\cftbeforetoctitleskip}{2.0em}
-\setlength{\cftaftertoctitleskip}{1.0em}
-\setlength{\cftbeforeloftitleskip}{2.0em}  % LOF: List of figures
-\setlength{\cftbeforelottitleskip}{2.0em}  % LOT: List of tables
-\cftsetpnumwidth{0.75em}  % Prevent overfull hbox on TOC numbers.
-
 % File system
 % https://ftp.gust.org.pl/TeX/macros/latex/contrib/currfile/currfile.pdf
 \usepackage{currfile}
+% Plots
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.17}
+% Good equations
+\usepackage[cmex10]{amsmath}
+% Better references
+\usepackage[noabbrev,nameinlink]{cleveref}
+% Code snippets
+\usepackage{listings}
+% Better include
+\usepackage{newclude}
 
 % TODO should be empty for a template, the .cls file should be standalone
-\usepackage[cmex10]{amsmath}
+\usepackage{pdfcomment}
 \usepackage{amsfonts}
 \usepackage{setspace}
 \usepackage{layout}
+% \usepackage[subfigure]{tocloft}  % Set TOC options.
 
 % \usepackage[format=hang]{subfig}  % Do not include caption package in here.
 \usepackage{algorithm}
