--- a/src/macros.tex
+++ b/src/macros.tex
@@ -26,4 +26,25 @@
   \raisebox{-.5\height}{\includegraphics[#1]{#2}}
 }
 
+% Path to a directory named as the current file.
 \newcommand{\subdir}{\currfiledir\currfilebase}
+
+% Creates a simple figure taking its filename and looking for it in the
+% \subdir. Its label will be the filename without extension. The caption must
+% be provided as well.
+\makeatletter
+\newcommand{\simplefigure}[2]{
+    \begin{figure}
+        \centering
+        \includegraphics[width=\linewidth]{\subdir/#1}
+        \caption{#2}
+        \filename@parse{#1}
+        \label{fig:\filename@base}
+    \end{figure}
+}
+\makeatother
+
+% Left superscripts and subscripts
+\newcommand\leftidx[3]{%
+  {\vphantom{#2}}#1#2#3%
+}
