--- a/content.tex
+++ b/content.tex
@@ -1,5 +1,9 @@
-\include*{content/task-description}
+\include*{content/introduction}
 
-\include*{content/algorithm}
+\include*{content/related-work}
+
+\include*{content/overview}
+
+\include*{content/evaluation}
 
 \include*{content/conclusions}
