--- a/content/introduction.tex
+++ b/content/introduction.tex
@@ -1,4 +1,4 @@
-\section{Task Description}
+\section{Introduction}
 
 Review of the existent space rovers. With conclusions on the end (5-10 pages,
 no more)
