--- a/content/overview.tex
+++ b/content/overview.tex
@@ -1,8 +1,5 @@
-\section{Motivation}
+\section{Overview}
 The motivation
-
-\subsection{Problem}
-something here
 
 \subsection{Implementation}
 \href{https://www.bu.edu/math/files/2013/08/tikzpgfmanual.pdf}{Tikz Manual}
@@ -50,5 +47,5 @@ something here
 \label{fig:fms}
 \end{figure}
 
-\subsection{Objectives}
+\subsection{My subsystem}
 finish
