Added soul package

--- a/src/packages.tex
+++ b/src/packages.tex
@@ -40,6 +40,8 @@
 \usepackage{newclude}
 % Better references
 \usepackage[noabbrev,nameinlink]{cleveref}
+% Highlight with \hl{...} 
+\usepackage{soul}
 
 % ``float'' algorithms
 \usepackage{algorithm}
